--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -124,16 +124,16 @@
                             <span class="badge badge-admin ms-2">Admin</span>
                         </a>
                     </div>
+
+
+                    <!-- Actividades Culturales - Para todos -->
+                    <div class="nav-item">
+                        <a href="@Url.Action("Index", "EmailSettings")" class="nav-link">
+                            <i class="fas fa-server"></i>
+                            <span class="nav-text">Configuracion</span>
+                        </a>
+                    </div>
                 }
-
-                <!-- Actividades Culturales - Para todos -->
-                <div class="nav-item">
-                    <a href="@Url.Action("Index", "EmailSettings")" class="nav-link">
-                        <i class="fas fa-calendar-alt"></i>
-                        <span class="nav-text">Configuracion</span>
-                    </a>
-                </div>
-
 
                 <!-- Reportes - Solo para Administradores y Bibliotecarios -->
                 @if (User.IsInRole("Administrador") || User.IsInRole("Bibliotecario"))
@@ -285,6 +285,9 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
 
     <script>
         // Control del sidebar responsivo
