--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
                 <div class="nav-item">
                     <a asp-controller="SociosLectores" asp-action="Index" class="nav-link">
                         <i class="fas fa-user-friends"></i>
-                        <span class="nav-text">Socios y Lectores</span>
+                        <span class="nav-text">Gestión Bibliográfica</span>
                     </a>
                 </div>
 
