Cambio de nombre Socios y Lectores a Gestion Bibliografica

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="nav-item">
-                    <a asp-controller="SociosLectores" asp-action="Index" class="nav-link">
+                    <a asp-controller="GestionBibliografica" asp-action="Index" class="nav-link">
                         <i class="fas fa-user-friends"></i>
                         <span class="nav-text">Gestión Bibliográfica</span>
                     </a>
